vpc-vr/sg.tf
resource "aws_security_group" "allow_tls" {

name = "allow_tls"

description = "Allow TLS inbound traffic"

vpc_id = aws_vpc.main.id

ingress {

description = "TLS from VPC"

from_port = 22

to_port = 22

protocol = "tcp"

cidr_blocks = ["0.0.0.0/0"]

}

egress {

from_port = 0

to_port = 0

protocol = "-1"

cidr_blocks = ["0.0.0.0/0"]

}

  tags = {
    "Name"      = var.tag_name
    "Environment" = var.tag_environment
    "Project" = var.tag_project
    "Owner" = var.tag_owner 
  }
}
